--- a/css/group.scss
+++ b/css/group.scss
@@ -89,6 +89,7 @@ ul.news {
 
 @media (min-width: 768px) {
     .role.masters     { column-count: 2 }
+    .role.pi     { column-count: 2 }
     .project-people { column-count: 3 }
     //.card-columns   { column-count: 3 }
     .card-columns   { display: flex;
