--- a/_includes/patents.html
+++ b/_includes/patents.html
@@ -1,9 +1,95 @@
-<!-- ---
-layout: default
-title: Patents
----
-<p>
-    <a href="{{ site.baseurl }}/bib/patents.bib">Download BibTeX.</a>
-</p>
-
-{% include patents.html %} -->
+<table class="table">
+<tbody>
+    
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                <a href="https://patents.google.com/patent/US20210107372A1">Method for Determining Optimal Placement of Electric Vehicle Chargers</a>.
+            </span><br />
+            <span class="authors">
+                Venkatasubramanian Viswanathan, Matthew Guttenberg, and Shashank Sripad.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=patent)</span>.
+            <span class="note">
+            <br />
+            <strong>US Patent App. 17/066,755</strong>
+            </span>
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                <a href="https://patents.google.com/patent/US20200403234A1">Electrochemical materials including solid and liquid phases</a>.
+            </span><br />
+            <span class="authors">
+                Yet-Ming Chiang, Richard Park, Venkatasubramanian Viswanathan, Shashank Sripad, Zijian Hong, and Pinwen Guan.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=patent)</span>.
+            <span class="note">
+            <br />
+            <strong>US Patent App. 16852308</strong>
+            </span>
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                <a href="https://patents.google.com/patent/US20200028165A1/en">Electrolytes for lithium metal electrodes and rechargeable batteries using same</a>.
+            </span><br />
+            <span class="authors">
+                Yet-Ming Chiang, Venkatasubramanian Viswanathan, Linsen Li, Vikram Pande, and David Wang.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=patent)</span>.
+            <span class="note">
+            <br />
+            <strong>US Patent App. 16/430,803</strong>
+            </span>
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                <a href="https://patents.google.com/patent/US20180175470A1">Lithium-bromine rechargeable electrochemical system and applications thereof</a>.
+            </span><br />
+            <span class="authors">
+                Peng Bai, Martin Z Bazant, and Venkatasubramanian Viswanathan.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=patent)</span>.
+            <span class="note">
+            <br />
+            <strong>US Patent App. 15/820,873</strong>
+            </span>
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                <a href="https://patents.google.com/patent/US20170288281A1">Lithium metal electrodes and batteries thereof</a>.
+            </span><br />
+            <span class="authors">
+                Yet-Ming Chiang, Venkatasubramanian Viswanathan, Linsen Li, Vikram Pande, Dilip Krishnamurthy, Zeeshan Ahmad, and William Henry Woodford.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=patent)</span>.
+            <span class="note">
+            <br />
+            <strong>US Patent App. 15/480,235</strong>
+            </span>
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+</tbody>
+</table>
