--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -2,81 +2,121 @@
 <tbody>
     
     <tr>
-        <td>
-            <span class="date">
-                
-                <big><strong>2020</strong></big><br />
-                
-                
-            </span>
-        </td>
         <td class="publication">
             <span class="pubtitle">
-                <a href="https://doi.org/10.1007/978-3-030-61609-0\_62">ACE-Net: Adaptive Context Extraction Network for Medical Image Segmentation</a>.
+                Wavelet U-Net for Medical Image Segmentation.
+            </span><br />
+            <span class="authors">
+                Ying Li, Yu Wang, Tuo Leng, and Wen Zhijie.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">International Conference on Artificial Neural Networks</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                ACE-Net: Adaptive Context Extraction Network for Medical Image Segmentation.
             </span><br />
             <span class="authors">
                 Tuo Leng, Yu Wang, Ying Li, and Zhijie Wen.
             </span><br />
-            <span class="venuetype"></span><span class="venue">Artificial Neural Networks and Machine Learning - ICANN 2020 - 29th International Conference on Artificial Neural Networks, Bratislava, Slovakia, September 15-18, 2020, Proceedings, Part I (Lecture Notes in Computer Science)</span>.
+            <span class="venuetype"></span><span class="venue">International Conference on Artificial Neural Networks</span>.
             <br />
             <span class="links">
             </span>
         </td>
     </tr>
     <tr>
-        <td>
-            <span class="date">
-                
-                
-            </span>
-        </td>
         <td class="publication">
             <span class="pubtitle">
-                <a href="https://doi.org/10.1007/978-3-030-61609-0\_63">Wavelet U-Net for Medical Image Segmentation</a>.
+                Variational autoencoder for regression: Application to brain aging analysis.
             </span><br />
             <span class="authors">
-                Ying Li, Yu Wang, Tuo Leng, and Zhijie Wen.
+                Qingyu Zhao, Ehsan Adeli, Nicolas Honnorat, Tuo Leng, and Kilian M Pohl.
             </span><br />
-            <span class="venuetype"></span><span class="venue">Artificial Neural Networks and Machine Learning - ICANN 2020 - 29th International Conference on Artificial Neural Networks, Bratislava, Slovakia, September 15-18, 2020, Proceedings, Part I (Lecture Notes in Computer Science)</span>.
+            <span class="venuetype"></span><span class="venue">International Conference on Medical Image Computing and Computer-Assisted Intervention</span>.
             <br />
             <span class="links">
             </span>
         </td>
     </tr>
     <tr>
-        <td>
-            <span class="date">
-                
-                <big><strong>2019</strong></big><br />
-                
-                
-            </span>
-        </td>
         <td class="publication">
             <span class="pubtitle">
-                Variational AutoEncoder For Regression: Application to Brain Aging Analysis.
+                Data Augmentation Based on Substituting Regional MRIs Volume Scores.
             </span><br />
             <span class="authors">
-                Qingyu Zhao, Ehsan Adeli, Nicolas Honnorat, Tuo Leng, and Kilian M. Pohl.
+                Tuo Leng, Qingyu Zhao, Chao Yang, Zhufu Lu, Ehsan Adeli, and Kilian M Pohl.
             </span><br />
-            <span class="venuetype"></span><span class="venue">Unknown venue (type=misc)</span>.
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=incollection)</span>.
             <br />
             <span class="links">
             </span>
         </td>
     </tr>
     <tr>
-        <td>
-            <span class="date">
-                
-                <big><strong>2015</strong></big><br />
-                
-                
-            </span>
-        </td>
         <td class="publication">
             <span class="pubtitle">
-                <a href="https://doi.org/10.1186/s13660-015-0719-z">Generalizations of Cauchy-Schwarz inequality in unitary spaces</a>.
+                On discrete Wirtinger-Northcott problems.
+            </span><br />
+            <span class="authors">
+                Tuo Leng, Qingyu Zhao, and Xiaolin Qin.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Linear Algebra and its Applications</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                The Fermat-Torricelli Problem of Triangles on the Sphere with Euclidean Metric: A Symbolic Solution with Maple.
+            </span><br />
+            <span class="authors">
+                Xiaofeng Guo, Tuo Leng, and Zhenbing Zeng.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Maple Conference</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                Artificial intelligence and people’s consensus.
+            </span><br />
+            <span class="authors">
+                Shanshan Zhang, Cheng Yang, Nina Qian, Qingye Tang, Xiangfeng Luo, Tuo Leng, Xiaoqiang Li, and Yuexing Han.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=incollection)</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                Discrete Wirtinger type inequality under non-periodic end conditions.
+            </span><br />
+            <span class="authors">
+                Tuo Leng.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Journal of Mathematical Analysis and Applications 434(1)</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                Generalizations of Cauchy-Schwarz inequality in unitary spaces.
             </span><br />
             <span class="authors">
                 Leng Tuo.
@@ -84,11 +124,91 @@
             <span class="venuetype"></span><span class="venue">Journal of Inequalities and Applications 2015(1)</span>.
             <br />
             <span class="links">
-                [<a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" onclick="$('#abstract_cite-key').slideToggle('fast');return false;">abstract</a>]
             </span>
-            <div id="abstract_cite-key" class="abstract">
-            In this paper, we give a generalization of Cauchy-Schwarz inequality in unitary spaces and obtain its integral analogs. As an application, we establish an inequality for covariances.
-            </div>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                The sharp upper bound for the ratio between the arithmetic and the geometric mean.
+            </span><br />
+            <span class="authors">
+                Tuo Leng and Xiaolin Qin.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Math. Inequal. Appl 18(3)</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                Converses of a discrete Wirtinger type inequality.
+            </span><br />
+            <span class="authors">
+                Leng Tuo and Feng Yong.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">JOURNAL OF MATHEMATICAL INEQUALITIES 8(2)</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                Finding the Symbolic Solution of a Geometric Problem Through Numerical Computations.
+            </span><br />
+            <span class="authors">
+                Liangyu Chen, Tuo Leng, Liyong Shen, Min Wu, Zhengfeng Yang, and Zhenbing Zeng.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Unknown venue (type=incollection)</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                On Hardy-type integral inequalities.
+            </span><br />
+            <span class="authors">
+                Tuo Leng and Yong Feng.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Applied Mathematics and Mechanics 34(10)</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                Spectral properties and geometric interpretation of R-filters.
+            </span><br />
+            <span class="authors">
+                Tuo Leng.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Applied Mathematics and Mechanics 30(1)</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <td class="publication">
+            <span class="pubtitle">
+                Note on an inequality of Vicente Gon\ccalves.
+            </span><br />
+            <span class="authors">
+                Jun Yuan and Tuo Leng.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">Journal of Shanghai University (English Edition) 11(2)</span>.
+            <br />
+            <span class="links">
+            </span>
         </td>
     </tr>
 </tbody>
