--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -80,7 +80,7 @@
             <span class="authors">
                 Shanshan Zhang, Cheng Yang, Nina Qian, Qingye Tang, Xiangfeng Luo, Tuo Leng, Xiaoqiang Li, and Yuexing Han.
             </span><br />
-            <span class="venuetype"></span><span class="venue">Unknown venue (type=incollection)</span>.
+            <span class="venuetype"></span><span class="venue">Reconstructing Our Orders</span>.
             <br />
             <span class="links">
             </span>
@@ -150,7 +150,7 @@
             <span class="authors">
                 Liangyu Chen, Tuo Leng, Liyong Shen, Min Wu, Zhengfeng Yang, and Zhenbing Zeng.
             </span><br />
-            <span class="venuetype"></span><span class="venue">Unknown venue (type=incollection)</span>.
+            <span class="venuetype"></span><span class="venue">Computer Mathematics</span>.
             <br />
             <span class="links">
             </span>
