--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 
             <div class="footer">
                 <p>
-                    Our Group is primarily based in the Shanghai University Computer Engineering Science Department, with additional affiliations with Artificial Intelligence Institute. 
+                    Our Group is primarily based in the School of Computer Engineering and Sciences of Shanghai University, with additional affiliations with the School of Artificial Intelligence of Shanghai University. 
                 <p>
                     <a href="https://www.shu.edu/legal/">Legal Info</a>
             </div>
